# kestrel

./: .editorconfig  .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.txt  Makefile  NOTICE  PKGBUILD  README.md  THIRD-PARTY-LICENSE.txt  THIRD-PARTY.txt  archive.py  build.py  docker-deb  docker-packages  docker-rpm  kestrel.spec  make-deb  make-packages  setup.iss  windows-build.ps1
.cargo/: config.toml
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: keyring.rs
cli/tests/: keyring.txt
crates/crypto/: Cargo.toml
crates/crypto/src/: errors.rs
crypto/: CHANGELOG.md  Cargo.toml  README.md
crypto/src/: decrypt.rs  encrypt.rs  errors.rs  lib.rs  noise.rs  xdh.rs
debian/: README.Debian  changelog  control  copyright  kestrel.bash-completion  kestrel.manpages  rules  watch
debian/patches/: series
debian/source/: local-options
docs/: Makefile  file-format.txt  kestrel.1.md  security-notes.md
docs/man/: kestrel.1
packaging/debian/: changelog  kestrel-complete.sh
packaging/windows/: setup.iss
src/: commands.rs  decrypt.rs  encrypt.rs  errors.rs  keyring.rs  main.rs  utils.rs
src/cli/: Cargo.toml  README.md
src/cli/src/: commands.rs  errors.rs  keyring.rs  main.rs
src/cli/tests/: data.txt  data.txt.ktl  keyring.txt  smoke_test.rs
src/crypto/: CHANGELOG.md  Cargo.toml  README.md  decrypt.rs  encrypt.rs  errors.rs  mod.rs  noise.rs
src/crypto/benches/: bench.rs
src/crypto/src/: decrypt.rs  encrypt.rs  errors.rs  lib.rs  noise.rs  scrypt.rs
src/ffi/: Cargo.toml  README.md  kestrel-crypto.h
src/ffi/src/: lib.rs
tests/: data.txt.ktl  pdata.txt.ktl  smoke_test.rs
windows/: setup.iss
wren-crypto/src/: lib.rs  noise.rs
