[package]
name = "kestrel-cli"
version = "0.2.0"
edition = "2021"
authors = [
    "Kyle Schreiber <kyle@80x24.net>",
]
readme = "README.md"
license = "Apache-2.0"
description = "Kestrel file encryption program"
repository = "https://github.com/finfet/kestrel"
homepage = "https://github.com/finfet/kestrel"
keywords = ["encryption", "file"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "kestrel"
path = "src/main.rs"

[dependencies]
kestrel-crypto = { version = "0.2.0", path = "crypto" }
base64 = "0.13.0"
getopts = "0.2.21"
anyhow = "1.0"
passterm = "1.0.1"

[dev-dependencies]
hex = "0.4.3"

[workspace]
members = ["crypto"]

[profile.dev.package.scrypt]
opt-level = 3

[profile.test.package.scrypt]
opt-level = 3
