[package]
name = "kestrel-crypto"
version = "0.2.0"
edition = "2021"
authors = [
    "Kyle Schreiber <kyle@80x24.net>",
]
readme = "README.md"
license = "Apache-2.0"
description = "Cryptography backend for Kestrel"
repository = "https://github.com/finfet/kestrel"
homepage = "https://github.com/finfet/kestrel"
categories = ["cryptography"]

[dependencies]
getrandom = "0.2.3"
x25519-dalek = "1.2.0"
chacha20poly1305 = "0.9.0"
sha2 = "0.9.8"
hmac = "0.11.0"
scrypt = { version = "0.8.0", default-features = false }

[dev-dependencies]
hex = "0.4.3"
