[package]
name = "kestrel-crypto"
version = "0.9.0"
edition = "2021"
authors = [
    "Kyle Schreiber <kyle@80x24.net>",
]
readme = "README.md"
license = "BSD-3-Clause"
description = "Cryptography backend for Kestrel"
repository = "https://github.com/finfet/kestrel"
homepage = "https://github.com/finfet/kestrel"
documentation = "https://docs.rs/kestrel-crypto/"
categories = ["cryptography"]

[dependencies]
getrandom = "0.2.3"
curve25519-dalek = { version = "3.2.0", default-features = false, features = ["u64_backend"] }
chacha20poly1305 = "0.9.0"
sha2 = "0.10.1"
hmac = "0.12.0"
scrypt = { version = "0.8.1", default-features = false }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
hex = "0.4.3"
