[package]
name = "kestrel-crypto"
version = "0.11.0"
edition = "2021"
authors = [
    "Kyle Schreiber <kyle@80x24.net>",
]
readme = "README.md"
license = "BSD-3-Clause"
description = "Cryptography backend for Kestrel"
repository = "https://github.com/finfet/kestrel"
homepage = "https://github.com/finfet/kestrel"
documentation = "https://docs.rs/kestrel-crypto/"
categories = ["cryptography"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
x25519-dalek = "2.0.0-rc.2"
chacha20poly1305 = "0.10.1"
sha2 = "0.10.7"
hmac = "0.12.1"
scrypt = "0.11.0"
zeroize = { version = "1.6", features = ["zeroize_derive"] }

[dev-dependencies]
hex = "0.4.3"
