[package]
name = "kestrel-cli"
version = "1.0.0-rc1"
edition = "2021"
authors = [
    "Kyle Schreiber <kyle@80x24.net>",
]
readme = "README.md"
license = "BSD-3-Clause"
description = "Kestrel file encryption program"
repository = "https://github.com/finfet/kestrel"
homepage = "https://getkestrel.com"
keywords = ["encryption", "file"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "kestrel"
path = "src/main.rs"

[dependencies]
kestrel-crypto = { version = "1.0.0-rc1", path = "../crypto" }
base64ct = { version = "1.6.0", features = ["alloc"] }
getopts = "0.2.21"
anyhow = "1.0"
passterm = { version = "2.0.1", features = ["secure_zero"] }
zeroize = "1.7"

[dev-dependencies]
hex = "0.4.3"
