[package]
name = "kestrel-cli"
version = "1.0.3"
edition = "2024"
rust-version = "1.85"
authors = [
    "Kyle Schreiber <kyle@80x24.net>",
]
readme = "README.md"
license = "BSD-3-Clause"
description = "Kestrel file encryption program"
repository = "https://github.com/finfet/kestrel"
homepage = "https://getkestrel.com"
keywords = ["encryption", "file"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "kestrel"
path = "src/main.rs"

[dependencies]
kestrel-crypto = "3"
ct-codecs = "1.1.6"
getopts = { version = "0.2.24", default-features = false }
anyhow = "1.0"
passterm = { version = "2.0.5", features = ["secure_zero"] }
zeroize = "1.8"
