[package]
name = "kestrel-crypto"
version = "3.0.0"
edition = "2021"
authors = [
    "Kyle Schreiber <kyle@80x24.net>",
]
readme = "README.md"
license = "BSD-3-Clause"
description = "Cryptography backend for Kestrel"
repository = "https://github.com/finfet/kestrel"
homepage = "https://github.com/finfet/kestrel"
documentation = "https://docs.rs/kestrel-crypto/"
categories = ["cryptography"]

[dependencies]
getrandom = "0.2.15"
zeroize = "1.8"
orion = "0.17.7"

[dev-dependencies]
hex = "0.4.3"

[features]
default = [ "std" ]
std = []
