[package]
name = "kestrel-crypto"
version = "3.0.1"
edition = "2024"
rust-version = "1.85"
authors = [
    "Kyle Schreiber <kyle@80x24.net>",
]
readme = "README.md"
license = "BSD-3-Clause"
description = "Cryptography backend for Kestrel"
repository = "https://github.com/finfet/kestrel"
homepage = "https://github.com/finfet/kestrel"
documentation = "https://docs.rs/kestrel-crypto/"
categories = ["cryptography"]

[dependencies]
getrandom = "0.3"
zeroize = "1.8"
orion = "0.17.11"

[dev-dependencies]
ct-codecs = "1.1.6"

[features]
default = [ "std" ]
std = []
